--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.sharknoon.officesense">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="true"
@@ -10,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/MainTheme">
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.HomeActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,20 +23,10 @@
         </activity>
         <activity
             android:name=".activities.AboutActivity"
-            android:label="@string/title_about"
-            android:parentActivityName=".activities.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="de.sharknoon.officesense.activities.MainActivity" />
-        </activity>
+            android:label="@string/title_about" />
         <activity
             android:name=".activities.SettingsActivity"
-            android:label="@string/title_settings"
-            android:parentActivityName=".activities.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="de.sharknoon.officesense.activities.MainActivity" />
-        </activity>
+            android:label="@string/title_settings" />
 
         <meta-data
             android:name="com.google.android.actions"
