--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'net.danlew:android.joda:2.10.1'
+    implementation 'net.sourceforge.streamsupport:streamsupport:1.7.0'
 }
 repositories {
     mavenCentral()
