--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'net.danlew:android.joda:2.10.1'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.1.1'
     implementation 'net.sourceforge.streamsupport:streamsupport:1.7.0'
 }
 repositories {
