--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="de.sharknoon.officesense">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -31,6 +34,10 @@
         <meta-data
             android:name="com.google.android.actions"
             android:resource="@xml/preferences" />
+
+        <service
+            android:name=".service.IndoorClimateObserverService"
+            android:exported="false" />
     </application>
 
 </manifest>
